fixed fatmenu colorchange not showing up after disabling it (#768)

--- a/frontend/packages/volto-light-theme/src/theme/_bgcolor-blocks-layout.scss
+++ b/frontend/packages/volto-light-theme/src/theme/_bgcolor-blocks-layout.scss
@@ -1273,7 +1273,7 @@
 
       // Navigation
       nav.navigation {
-        button.item {
+        .item {
           color: var(--header-foreground);
         }
         .submenu-wrapper {
