--- a/frontend/packages/volto-light-theme/src/theme/_header.scss
+++ b/frontend/packages/volto-light-theme/src/theme/_header.scss
@@ -592,7 +592,7 @@ body.has-toolbar.has-sidebar {
       }
     }
 
-    & > li:first-child > button {
+    & > li:first-child > .item {
       margin-left: 0;
     }
 
